<resources>
    <string name="app_name">Saba</string>
    <string name="image_onboarding">Image Onboarding</string>
    <string name="indicator_1">Indicator 1</string>
    <string name="indicator_2">Indicator 2</string>
    <string name="indicator_3">Indicator 3</string>
    <string name="image_splashscreen">Image Splashscreen</string>
    <string name="button_image">Button Image</string>
    <string name="masuk">MASUK</string>
    <string name="atau">atau</string>
    <string name="daftar">DAFTAR</string>
    <string name="password">Password</string>
    <string name="image_login">Image Login</string>
    <string name="saba">SABA</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="masukan_data_kamu">Masukan data kamu</string>
    <string name="tanggal_berapa_kamu_lahir">Tanggal berapa kamu lahir?</string>
    <string name="apa_jenis_kelamin_kamu">Apa jenis kelamin kamu?</string>
    <string name="laki_laki">Laki- laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="selesai">Selesai</string>
    <string name="let_s_go">Lets Go......</string>
    <string name="image_finish">Image Finish</string>
    <string name="next_button">next button</string>
    <string name="assisten">Assisten</string>
    <string name="home">Home</string>
    <string name="email_not_valid">Email Not Valid</string>
    <string name="email_is_null">Isi Email anda dahulu</string>
    <string name="password_is_null">Isi password anda dahulu</string>
    <string name="sign_out">Sign out</string>
    <string name="kami_akan_membantu_anda_membuat_akun_baru_ndengan_sangat_mudah">Kami akan membantu anda membuat akun baru &#10; Dengan sangat mudah.</string>
    <string name="password_not_same">Password tidak sama</string>
    <string name="password_8">Password minimal 8 karakter</string>
    <string name="nama_tidak_boleh_kosong">Nama tidak boleh kosong</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>

    <string name="todo">To Do</string>
    <string name="note">Note</string>
    <string name="btn_chat_sent">Btn Chat Sent</string>
    <string name="tuliskan_pesan_disini">Tuliskan pesan disini</string>
    <string name="get_private_mentor">Get private mentor</string>
    <string name="get_a_private_mentor">Get a Private Mentor</string>
    <string name="kamu_bisa_membuat_pertanyaan_spesifik_ke_mentor_yang_ahli_di_bidang_nya">Kamu bisa membuat pertanyaan spesifik Ke Mentor yang ahli di Bidang nya</string>
    <string name="_1_bulan_langganan_n_1_minggu_1_kali_pertemuan_dalam_waktu_1_jam"><b>1 Bulan Langganan</b> <br /> 1   Minggu 1 kali pertemuan dalam waktu 1 jam</string>
    <string name="our_mentor">Our Mentor</string>
    <string name="bagoes">Bagoes</string>
    <string name="ml_expert">Machine Learning <br /> Expert</string>
    <string name="dion_sunardi">Dion Sunardi</string>
    <string name="android_developer_expert">Android Developer<br /> Expert</string>
</resources>