<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_200"
    tools:context=".ui.onboarding.OnBoardingActivity">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </androidx.viewpager2.widget.ViewPager2>

    <LinearLayout
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/indicator1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/indicator_1"
            android:src="@drawable/ic_indicator_on"
            tools:src="@drawable/ic_indicator_on" />

        <ImageView
            android:id="@+id/indicator2"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/indicator_2"
            android:src="@drawable/ic_indicator_off"
            tools:src="@drawable/ic_indicator_off" />

        <ImageView
            android:id="@+id/indicator3"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/indicator_3"
            android:src="@drawable/ic_indicator_off"
            tools:src="@drawable/ic_indicator_off" />

        <ImageView
            android:id="@+id/indicator4"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="Indicator 4"
            android:src="@drawable/ic_indicator_off"
            tools:src="@drawable/ic_indicator_off" />

        <ImageView
            android:id="@+id/indicator5"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="Indicator 5"
            android:src="@drawable/ic_indicator_off"
            tools:src="@drawable/ic_indicator_off" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_btn_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/button_image"
        android:focusable="true"
        android:src="@drawable/ic_button_next"
        tools:src="@drawable/ic_button_next" />


</FrameLayout>