<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mentor.OurMentorFragment">

    <TextView
        android:id="@+id/title_mentor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/our_mentor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_mentor_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bagoes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_mentor"
        tools:src="@drawable/bagoes" />

    <TextView
        android:id="@+id/tv_mentor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dion_sunardi"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_mentor_2"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="@+id/iv_mentor_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_mentor_2" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/android_developer_expert"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mentor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_mentor_2"
        app:layout_constraintVertical_bias="0.392" />

    <TextView
        android:id="@+id/tv_mentor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bagoes"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_mentor_1"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/iv_mentor_1"
        app:layout_constraintTop_toBottomOf="@+id/iv_mentor_1" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/ml_expert"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mentor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_mentor_1"
        app:layout_constraintVertical_bias="0.569" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_mentor_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mentor1"
        tools:src="@drawable/dion" />


</androidx.constraintlayout.widget.ConstraintLayout>