<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/apa_jenis_kelamin_kamu"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="261dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_bg_daftar"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/rg_gender_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <RadioButton
                android:id="@+id/rb_male_signUp"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:backgroundTint="@color/blue_700"
                android:text="@string/laki_laki" />

            <RadioButton
                android:id="@+id/rb_female_signUp"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:textSize="32sp"
                android:enabled="true"
                android:backgroundTint="@color/blue_700"
                android:text="@string/perempuan" />


        </RadioGroup>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>